[package]
name = "uniswapx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
futures = { version = "0.3.19", features = ["alloc"] }
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
ethers = { version = "2.0.7" }
uniswapx-internal-bindings = { path = "./bindings" }