[workspace.package]
name = "uniswapx-sdk"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
	"ethers-bindings",
	"server",
	"api",
	"sdk"
]

default_members=[
	"ethers-bindings",
        "server",
        "api",
        "sdk"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

