[workspace.package]
name = "uniswapx-sdk"
version = "0.1.0"
edition = "2021"

[workspace]
members=[
	"ethers-bindings",
	"server",
	"api",
	"core",
	"working-bin"
]

default_members=[
	"ethers-bindings",
	"server",
	"api",
	"core",
	"working-bin"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.12.0", features = ["full"] }
futures = { version = "0.3.19", features = ["alloc"] }
serde = { version = "1.0.130", features = ["derive"] }
alloy-sol-types = { version = "0.2.0" } 
alloy-primitives = { version = "0.2.0" }
tracing = { version = "0.1.27", features = ["log"] }
tracing-subscriber = { version = "0.2.22", features = ["env-filter"] }