[package]
name = "uniswapx-sdk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0.70"
async-stream = "0.3.0"
async-trait = "0.1.51"
futures-util = "0.3.19"

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
alloy-sol-types = { workspace = true }
uniswapx-sdk-core = { path = "../core" }